update README with instructions and fix path issue in mcc

--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-README
+# Steps
+
+    $ ./mcc.s.pl mcc.s.pl
+    $ mv mcc ~/bin/
+    $ for a in *.s.*; do mcc $a; done # There will be a couple errors as template* files are processed
+
